# parrd_sampling

./: .gitignore  Cargo.toml
analysis/: Performance Analyzer.ipynb
analysis/results/: multi_core_new.csv  multi_core_result.csv  multiht_core_new.csv  single_core_new.csv  single_core_result.csv
analysis/results/backup/: single_core_result.csv
benches/: multi_core.rs  multi_core_ht.rs  single_core.rs
cpp/: .gitignore  BENCH_CMD  CMakeLists.txt  bench.sh  main.cpp  my_benchmark.py  my_benchmark.sh  sampling_main.cpp
cpp/analysis/: C++ Analysis.ipynb  my_bench_results_1.csv  my_bench_results_12.csv  my_bench_results_12_100M.csv  my_bench_results_12_500M.csv  my_bench_results_1_100M.csv  my_bench_results_1_500M.csv  my_bench_results_24.csv  my_bench_results_24_100M.csv  new_bench_results_12_500M.csv  new_bench_results_1_500M.csv  new_bench_results_24_500M.csv  new_new_bench_results_12_500M.csv  new_new_bench_results_1_500M.csv  new_new_bench_results_24_500M.csv  results.json  small_results_1.csv
cpp/benchmark/: CMakeLists.txt  sampling_benchmarks.cpp
cpp/samplers/: naive_sampler.h  permutation_sampler.h  priority_sampler.h  sampler_model.cpp  sampler_model.h
cpp/test/: CMakeLists.txt  sampling_tests.cpp
presentation/: Makefile  macros.tex  main.tex  preamble.tex  refs.bib
presentation/sections/: background.tex  conclusion.tex  experiment.tex  par-knuth-shuffle.tex
rust/: Cargo.toml
rust/analysis/results/: multiht_core_result.csv
rust/analysis/results/backup/: multi_core_result.csv  multiht_core_result.csv
rust/benches/: multi_core.rs  multi_core_ht.rs  single_core.rs
rust/src/: lib.rs  main.rs
rust/src/samplers/: perm_sampler.rs  priority_sampler.rs  sampl_interface.rs
rust/src/utils/: mod.rs  prefix_scan.rs
src/: cwslice.rs  lib.rs  main.rs  perm_sampler.rs  priority_sampler.rs
src/samplers/: mod.rs  naive_sampler.rs  perm_sampler.rs  priority_sampler.rs
src/utils/: cwslice.rs  mod.rs  my_bencher.rs  prefix_scan.rs
