[package]
name = "parrd_sampling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_traits = "0.10.2"
csv = "1.3.0"
fxhash = "0.2.1"
generic-array = "1.0.0"
getopts = "0.2.21"
rand = "0.8.5"
rayon = "1.9.0"

[profile.release]
debug = 1

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "single_core"
harness = false

[[bench]]
name = "multi_core"
harness = false

[[bench]]
name = "multi_core_ht"
harness = false
